--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                   type="checkbox"
                   name="time"
                   value="afternoon"
+                  checked
                   class="search-form__checkbox visually-hidden"
                 />
                 <span class="search-form__pseudo-checkbox"></span>
@@ -75,7 +76,6 @@
         </h1>
         <div class="content__list-container">
           <ul class="content__list">
-            <!-- ЗДЕСЬ ОКАЖУТСЯ ТЕМПЛЕЙТЫ КАРТОЧЕК -->
           </ul>
         </div>
       </section>
